Add readme and index.html

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <header>Content of the header tag</header>
     <main>
       <article>Content of the article tag</article>
