--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -43,6 +43,38 @@
                     cillum dolore eu fugiat nulla pariatur.</p>
             </div>
         </section>
+
+        <section id="what-we-do" class="what-we-do">
+            <div class="container">
+                <h2 class="section-title">What we do…</h2>
+                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <div class="services">
+                    <div class="service-item">
+                        <span class="holberton_school-icon-ic_sound"></span>
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="service-item">
+                        <span class="holberton_school-icon-ic_video"></span>
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="service-item">
+                        <span class="holberton_school-icon-ic_music"></span>
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="service-item">
+                        <span class="holberton_school-icon-ic_hearing"></span>
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
